[package]
name = "app_ton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true, default-features = false }
bitstream-io = { git = "https://github.com/KeystoneHQ/bitstream-io", tag = "no_std@0.1.2", default-features = false, features = [
    "alloc",
] }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
sha2 = { workspace = true }
core2 = { workspace = true }
cryptoxide = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
crc = "3.2.1"
lazy_static = { workspace = true }
serde = { workspace = true }
rust_tools = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }


[dev-dependencies]
keystore = { workspace = true }
anyhow = "*"
urlencoding = "2.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
