[package]
name = "app_tron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
app_utils = {path="../utils"}
prost = { version = "0.11.8", default-features = false }
prost-types = { version = "0.11.8", default-features = false }
ethabi = { version = "15.0.0", default-features = false }
ascii = { version = "1.1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
keystore = { path = "../../keystore"}

[build-dependencies]
prost-build = { version = "0.11.8" }

[features]
generate_pb=[]