[package]
name = "app_tron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true, default-features = false }

app_utils = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
ethabi = { version = "15.0.0", default-features = false }
ascii = { version = "1.1.0", default-features = false, features = ["alloc"] }
hex = { workspace = true }
bitcoin = { workspace = true }
cryptoxide = { workspace = true }
ur-registry = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
keystore = { workspace = true }

[build-dependencies]
prost-build = { version = "0.11.8" }

[features]
generate_pb = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }