[package]
name = "app_wallets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_utils = { workspace = true }
keystore = { workspace = true }
app_xrp = { workspace = true }
rust_tools = { workspace = true }
hex = { workspace = true }
ur-registry = { workspace = true }
bitcoin = { workspace = true }
cryptoxide = { workspace = true }
serde_json = { workspace = true }
zcash_vendor = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }